description holder changed

--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -31,9 +31,10 @@
                         <div class="form-group">
                             <label>Job Description <span>*</span></label>
                             <div class="NgxEditor__Wrapper">
-                                <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
+                                <!-- <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
                                 </ngx-editor-menu>
-                                <ngx-editor [editor]="editor" [placeholder]="'Type here...'" id="description"></ngx-editor>
+                                <ngx-editor [editor]="editor" [placeholder]="'Type here...'" id="description"></ngx-editor> -->
+                           <textarea class="form-control"  style="height:300px;"></textarea>
                             </div>
                         </div>
                     </div>
