--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -35,7 +35,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/">
+                                <a routerLink="/employer-dashboard">
                                     Employer Dashboard
                                 </a>
                             </li>
