--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -34,7 +34,7 @@
                                 <!-- <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
                                 </ngx-editor-menu>
                                 <ngx-editor [editor]="editor" [placeholder]="'Type here...'" id="description"></ngx-editor> -->
-                           <textarea class="form-control"  style="height:300px;"></textarea>
+                           <textarea class="form-control"  style="height:300px;" id="description"></textarea>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <!-- <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Job Apply Type <span>*</span></label>
                             <select class="form-select" id="">
@@ -91,7 +91,7 @@
                                 <option value="3">Call To Apply</option>
                             </select>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Salary Type <span>*</span></label>
@@ -195,7 +195,7 @@
                         </div>
                     </div> -->
                     <div class="col-lg-12 col-md-12">
-                        <button type="submit" class="default-btn">Submit & Preview</button>
+                        <button type="button" (click)="createJob()" class="default-btn">Submit & Preview</button>
                     </div>
                 </div>
             </form>
