--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -1,6 +1,6 @@
 <!-- Page Title -->
-<div class="inner-banner">
-    <div class="container">
+<div class="inner-banner" style="background-image: url('https://source.unsplash.com/random/?white-background');">
+    <div class="container-fluid">
         <div class="inner-title text-center">
             <h3>Hello, Mr. Black</h3>
             <!-- <ul>
