--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -1,5 +1,5 @@
 <!-- Page Title -->
-<div class="inner-banner" style="background-image: url('https://source.unsplash.com/random/?white-background');">
+<div class="inner-banner" style="background-image: url('https://i.ibb.co/sK0pVcJ/employer-dashboard.jpg');">
     <div class="container-fluid">
         <div class="inner-title text-center">
             <h3>Hello, Mr. Black</h3>
