--- a/src/app/components/pages/verify-otp/emp-account.html
+++ b/src/app/components/pages/verify-otp/emp-account.html
@@ -31,7 +31,7 @@
                         <div class="forgot-password-wrap">
                             <a (click)="resendOtp()" class="lost-your-password">Didnt Recived OTP yet? Resend it.</a>
                         </div>
-                        <button (click)="verifyOtp()" type="button">Login</button>
+                        <button (click)="verifyOtp()" type="button">Verify</button>
                     </form>
                 </div>
             </div>
