--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -3,43 +3,48 @@
     <div class="container-fluid">
         <div class="inner-title text-center">
             <!-- <h3>Hello, Mr. Black</h3> -->
-            <h3>Your Profile Summary</h3>
-            <div class="row">
-                <div class="col-lg-2 col-3 col-md-2">
-                    <!-- <div class="counter-item">
-                        <h3>140</h3>
-                        <p style="font-size: large;">Total Jobs Posted</p>
-                    </div> -->
+            <h3 class="mb-5">Your Profile Summary</h3>
+            <br>
+            <br>
+
+            <!-- <div class="col-lg-2 col-3 col-md-2">
+                <div class="counter-item">
+                    <h3>140</h3>
+                    <p style="font-size: large;">Total Jobs Posted</p>
                 </div>
-                <div class="col-lg-2 col-3 col-md-2">
-                    <div class="counter-item">
-                        <h4>5</h4>
-                        <p style="font-size: medium">Some data-2</p>
+            </div> -->
+            <div class="container-fluid" style="text-align: center; margin: auto;">
+                    <div class="row">
+                    <div class="col-lg-2 col-2 col-md-2">
+                        <div class="counter-item">
+                            <h4>5</h4>
+                            <p style="font-size: medium">Active Jobs</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-2 col-3 col-md-2">
-                    <div class="counter-item">
-                        <h4>5</h4>
-                        <p style="font-size: medium">Some data-3</p>
+                    <div class="col-lg-2 col-2 col-md-2">
+                        <div class="counter-item">
+                            <h4>5</h4>
+                            <p style="font-size: medium">New Applications</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-2 col-3 col-md-2">
-                    <div class="counter-item">
-                        <h4>5</h4>
-                        <p style="font-size: medium">Some data-3</p>
+                    <div class="col-lg-2 col-2 col-md-2">
+                        <div class="counter-item">
+                            <h4>5</h4>
+                            <p style="font-size: medium">Candidates to be reviewed</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-2 col-3 col-md-2">
-                    <div class="counter-item">
-                        <h4>5</h4>
-                        <p style="font-size: medium">Some data-3</p>
+                    <div class="col-lg-3 col-3 col-md-3">
+                        <div class="counter-item">
+                            <h4>5</h4>
+                            <p style="font-size: medium">Shortlisted candidates to be interviewed</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-2 col-3 col-md-2">
-                    <!-- <div class="counter-item">
-                        <h3>5</h3>
-                        <p style="font-size: large;">Some data-3</p>
-                    </div> -->
+                    <div class="col-lg-2 col-3 col-md-3">
+                        <div class="counter-item">
+                            <h4>5</h4>
+                            <p>Interviews scheduled for today</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- <ul>
@@ -55,7 +60,7 @@
 </div>
 
 <!-- Company Details -->
-<div class="company-details-area ptb-100 pb-5">
+<div class="company-details-area ptb-100 pb-0">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12">
