--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -1,11 +1,11 @@
 <!-- Page Title -->
-<div class="inner-banner">
+<div class="inner-banner" style="padding-bottom: 55px; padding-top: 180px;">
     <div class="container-fluid">
         <div class="inner-title text-center">
             <!-- <h3>Hello, Mr. Black</h3> -->
-            <h3 class="mb-5">Your Profile Summary</h3>
-            <br>
-            <br>
+            <h3 class="mb-5 mt-0">Your Profile Summary</h3>
+            <!-- <br> -->
+            <!-- <br> -->
 
             <!-- <div class="col-lg-2 col-3 col-md-2">
                 <div class="counter-item">
@@ -13,7 +13,8 @@
                     <p style="font-size: large;">Total Jobs Posted</p>
                 </div>
             </div> -->
-            <div class="container-fluid" style="text-align: center; margin: auto;">
+            <hr>
+            <div class="container-fluid m-2 p-2" style="text-align: center; margin: auto;">
                     <div class="row">
                     <div class="col-lg-2 col-2 col-md-2">
                         <div class="counter-item">
@@ -60,7 +61,7 @@
 </div>
 
 <!-- Company Details -->
-<div class="company-details-area ptb-100 pb-0">
+<div class="company-details-area ptb-100" style="padding-top: 0px; margin-top: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12">
