post-a-job removed location added 500 chars max in job-desc

--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -34,7 +34,7 @@
                                 <!-- <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
                                 </ngx-editor-menu>
                                 <ngx-editor [editor]="editor" [placeholder]="'Type here...'" id="description"></ngx-editor> -->
-                           <textarea class="form-control"  style="height:300px;" id="description" required></textarea>
+                           <textarea maxlength="500" class="form-control"  style="height:300px;" id="description" required></textarea>
                             </div>
                         </div>
                     </div>
@@ -167,26 +167,27 @@
                             <input type="date" class="form-control" id="deadline" required>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+
+                    <!-- <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Address <span>*</span></label>
                             <input type="text" class="form-control" id="friendly_address" required>
                         </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6">
+                    </div> -->
+                    <!-- <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Location <span>*</span></label>
-                            <!-- <select class="form-select" id="location">
+                            <select class="form-select" id="location">
                                 <option selected>London</option>
                                 <option value="1">Los Angeles</option>
                                 <option value="2">New York</option>
                                 <option value="3">Miami</option>
                                 <option value="4">Paris</option>
-                            </select> -->
+                            </select>
                             <input type="text" class="form-control" id="location" required>
 
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="col-lg-12 col-md-12">
                         <div class="form-group">
                             <label>Featured Image <span>*</span></label>
