added more details in job-listing card

--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -96,8 +96,24 @@
                             <li>
                                 <span>Employment Type</span> Part Time
                             </li>
+                            
                             <li>
                                 <span>Allowed Genders</span> {{ jobToArray[0][1].allowed_genders }}
+                            </li>
+
+                            <li>
+                                <span>Video Url</span> <a href="{{ jobToArray[0][1].allowed_genders }}">URL</a>
+                            </li>
+
+                            
+                            <li>
+                                <span>Required Qualification</span> {{ jobToArray[0][1].qualification }}
+                            </li>
+
+                            
+
+                            <li>
+                                <span>Job Posting Tags</span> {{ jobToArray[0][1].job_tags }}
                             </li>
 
                             <li>
