10 jobs created-job listing

--- a/src/app/components/pages/job-listings-page/job-listings-page.component.html
+++ b/src/app/components/pages/job-listings-page/job-listings-page.component.html
@@ -75,18 +75,22 @@
                                 </div>
                                 
                                 <h3> <a (click)="idPass(job[1].id)" routerLink="/job-details" style="font-size: larger;"> {{ job[1].job_title }}</a></h3>
-                                <ul class="job-list1" style="font-size: large;">
+                                <ul class="job-list1" style="font-size: medium;">
 
-                                    <li><i class="ri-briefcase-line"></i> Career Level: {{job[1].career_level}}</li>
-                                    <li><i class="ri-time-line"></i> Dead Line: {{job[1].deadline}}</li>
-                                    <li><i class="ri-time-line"></i> Experience: {{job[1].experience}}</li>
-                                    <li><i class="ri-time-line"></i> Qualification: {{job[1].qualification}}</li>
-                                    <li><i class="ri-time-line"></i> Job Type: {{job[1].job_type}} </li>
-                                    <li><i class="ri-time-line"></i> Allowed Genders: {{job[1].allowed_genders}} </li>
-                                    <li><i class="ri-time-line"></i> Job Tags: {{job[1].job_tags}} </li>
-                                    <li><i class="ri-time-line"></i> Job Category: {{job[1].job_category}} </li>
-                                    <li><i class="ri-time-line"></i> <a href="{{job[1].introduction_video_url}}">Video Url</a> </li>
-                                    <li><i class="ri-map-pin-line"></i> {{job[1].office_address}}, {{job[1].location}}</li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> Career Level: {{job[1].career_level}}</li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> Dead Line: {{job[1].deadline}}</li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> Experience: {{job[1].experience}} Years</li>
+                                </ul>
+                                <ul class="job-list1" style="font-size: medium;">
+                                    <li><i class="ri-arrow-right-s-fill"></i> Qualification: {{job[1].qualification}}</li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> Job Type: {{job[1].job_type}} </li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> Allowed Genders: {{job[1].allowed_genders}} </li>
+                                </ul>
+                                <ul class="job-list1" style="font-size: medium;">
+                                    <li><i class="ri-arrow-right-s-fill"></i> Job Category: {{job[1].job_category}} </li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> <a href="{{job[1].introduction_video_url}}">Video Url</a> </li>
+                                    <li><i class="ri-arrow-right-s-fill"></i> Tags: {{job[1].job_tags}} </li>
+                                    <!-- <li><i class="ri-map-pin-line"></i> {{job[1].office_address}}, {{job[1].location}}</li> -->
                                 </ul>          
 
                                 <hr>
