--- a/src/app/components/pages/job-details-page/job-details-page.component.css
+++ b/src/app/components/pages/job-details-page/job-details-page.component.css
@@ -1,3 +1,32 @@
+/* .job-card .content .job-list1 {
+  list-style-type: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+.job-card .content .job-list1 li {
+  position: relative;
+  padding-left: 22px;
+  display: inline-block;
+  color: var(--paragraphColor);
+  margin-bottom: 10px;
+  margin-right: 20px;
+}
+.job-card .content .job-list1 li i {
+  top: 0;
+  left: 0;
+  position: absolute;
+  color: var(--primaryColor);
+}
+.job-card .content .job-list1 li:last-child {
+  margin-right: 0;
+}
+.job-card .content .job-list1 li {
+  padding-left: 20px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+} */
+
+
 .job-card {
   max-width: 750px;
   position: relative;
