--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -9,10 +9,14 @@
             
             <h3>{{ jobToArray[0][1].job_title }}</h3>
 
-            <span class="location">by <a routerLink="/">{{ jobToArray[0][1].career_level }}</a> in {{ jobToArray[0][1].office_address }}, {{ jobToArray[0][1].location }}</span>
+            <!-- <span class="location">by <a routerLink="/">{{ jobToArray[0][1].career_level }}</a> in {{ jobToArray[0][1].office_address }}, {{ jobToArray[0][1].location }}</span> -->
             <br>
-            <span> Job-Type - {{ jobToArray[0][1].job_type }} </span>
-            <div> Job-tags - {{ jobToArray[0][1].job_tags }} </div>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <!-- <span> Job-Type - {{ jobToArray[0][1].job_type }} </span>
+            <div> Job-tags - {{ jobToArray[0][1].job_tags }} </div> -->
             <!-- <ul class="job-sub-content">
                 <li class="freelance" *ngIf = "{{ jobToArray[0][1].job_type }} === 'Freelance' " >Freelance</li>
                 <li class="freelance">Freelance</li>
